@@ -29,6 +29,7 @@ import java.awt.Dimension;
 import java.awt.FlowLayout;
 import java.beans.PropertyChangeEvent;
 import java.util.Arrays;
+import java.util.List;
 
 import static com.bric.swing.MultiThumbSlider.HORIZONTAL;
 import static java.awt.Color.BLACK;
@@ -236,7 +237,7 @@ public class GradientParam extends AbstractFilterParam {
 
     @Override
     public Object getParamValue() {
-        return Arrays.asList(gradientSlider.getValues());
+        return List.of(gradientSlider.getValues());
     }
 
     @Override
